
ChangeLog
 [ + added, - removed, * changed ]
 * 27Apr2015 Support for MPI_UNDEFINED in mpi_stats & filtering
 * 23Apr2015 Upgrade to 3.1.0rc
             Missing MPI+OpenMP example installation
             Improve directory construction on shared disks
             Shorten labels related to user source code references
             Change format for performance counters labels
 * 22Apr2015 Fix timings for first mode & hardware counter events
             Fix compilation in IBM ppc when --disable-openmp-gnu is given
             Make Extrae_user_function use the same parameters
 + 21Apr2015 Add check for MPI_Comm_spawn
             Add omp_get_thread_num default to 0 and message in Extrae
             Automatically detect the system type to enable/disable openmp runtimes
             Rebirth IBM xlsmp instrumentation (requires further testing)
 + 20Apr2015 --with-libgomp supports auto to determine the appropriate version from CC
             Add OpenMP task-based statistics (instantiated, executed)
             Add OMPT dependencies (MB project)
             Freeing memory, reported from Valgrind
 * 10Apr2015 Fixed bug in Python instrumentation. The signature of the
 Extrae_define_event_type receives parameters by reference.
 * 31Mar2015 Added configure options in the documentation regarding the on-line analysis and the instrumentation of OpenSHMEM.
 + 31Mar2014 Add SEQ example using -finstrument-functions
 * 30Mar2015 Create directory if target trace-file is in a directory that does not exist
 * 27Mar2015 Changed memory allocation for the InputTraces and FileSet structures in the merger: instead of allocating space for MAX_FILES, we allocate only for the maximum of mpits. MAX_FILES constant has been removed.
             Extended examples to support dynamic memory instrumentation.
 * 16Mar2015 Support up to 512 params in Intel KMP OpenMP runtime
 * 13Mar2015 Support to compile Extrae outside its src directory
             (thanks to Jorge Bellon)